<resources>
    <string name="news_action">ACTION_FOUND_NEWS_RECEIVED</string>
    <string name="im_action">ACTION_FOUND_IM_RECEIVED</string>
    <string name="push_id_action">ACTION_PUSH_ID_RECEIVED</string>
    <string name="broadcast_intent_extra_tag_news">broadcast_intent_extra_tag_news</string>
    <string name="broadcast_intent_extra_tag_news_entity">broadcast_intent_extra_tag_news</string>
    <string name="broadcast_intent_extra_tag_im">broadcast_intent_extra_tag_im</string>
    <string name="broadcast_intent_extra_tag_im_entity">broadcast_intent_extra_tag_im_entity</string>
    <string name="broadcast_intent_extra_tag_im_group">broadcast_intent_extra_tag_im_group</string>
    <string name="broadcast_intent_extra_tag_group_noticetype">broadcast_intent_extra_tag_group_noticetype</string>
    <string name="broadcast_intent_extra_tag_group_newtitle">broadcast_intent_extra_tag_group_newtitle</string>
    <string name="broadcast_intent_extra_tag_push_id">clientid</string>
    <string name="app_admin_iscenter">false</string>
    <string name="unique_application_config_id">ffffffffffffffffffffffffffffffff</string>
    <string name="app_config_root_path">/configs/</string>
    <string name="title_mainactivity">@string/found_app_name</string>
    <string name="slidingmenu_fade_degree">0.35</string>
    <string name="title_section1">Title1</string>
    <string name="title_section2">Title2</string>
    <string name="title_section3">Title3</string>
    <string name="found_app_name">Dochoo</string>
    <string name="loading">Loading</string>
    <string name="action_settings">Settings</string>
    <string name="action_doctor_detail">Doctor Detail</string>
    <string name="action_news_detail">News Detail</string>
    <string-array name="country_arrays">
        <item>Enter PIN Number</item>
        <item>Scan QR Code</item>
    </string-array>
    <string name="new_message">Unread message</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="ask_user_notification">Would you like to receive messages and news notifications from your care provider?</string>
    <string name="drawer_open">Open the drawer</string>
    <string name="drawer_close">Close the drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification_enabled">Notifications are enabled. To disable notifications, please go to settings menu.</string>
    <string name="notification_disabled">Notifications are disabled. To enable notifications, please go to settings menu.</string>
    <string name="notification">Notification</string>
    <string name="tab_title_medical_center">Medical Organization</string>
    <string name="tab_title_doctor_home">Healthcare Provider Info</string>
    <string name="tab_title_patient">Patient Info</string>
    <string name="tab_title_news">News &amp; Info</string>
    <string name="tab_title_messages">Messages</string>
    <string name="on_user_signed_in">Logged in!</string>
    <string name="on_user_signin_failed">Invalid Credentials. Please try again.</string>
    <string name="you_have_news">Your provider has updated news feeds.</string>
    <string name="message_invalid_image">Failed. Invalid image. Please try again</string>
    <string name="instant_message_content_desc_image">[Image]</string>
    <string name="instant_message_content_desc_file">[File]</string>
    <string name="instant_message_content_desc_voice">[Voice Message]</string>
    <string name="im_record_recording">Stop and send</string>
    <string name="im_record_cancel">Release to cancel</string>
    <string name="voice_message_press_to_play">Press to play message</string>
    <string name="voice_message_press_to_stop">Press to stop</string>
    <string name="ask_for_login">Sign In</string>
    <string name="error_msg_duplicate_username">The email has already been associated with an account.</string>
    <string name="error_msg_wrong_username_or_password">The email/password combination is incorrect.</string>
    <string name="error_msg_wrong_register_other">Registration failed. Please check your network connection and try again.</string>
    <string name="new_user_register">New User?</string>
    <string name="login_email">Username/Email:</string>
    <string name="login_password">Password:</string>
    <string name="network_wait">Connecting. Please wait</string>
    <string name="login_invalid_input">Invalid email/password. Please verify and try again.</string>
    <string name="sign_out_complete">You have successfully signed out.</string>
    <string name="action_registeruser">New User</string>
    <string name="register_success">Congratulations! You have successfully registered an account and have been automatically signed in.</string>
    <string name="register_unmatched_pwd">The two passwords you entered do not match.</string>
    <string name="register_all_fields_required">All fields are required.</string>
    <string name="register_password_too_short">Your password is too short. Please use a minimum of 6 characters.</string>
    <string name="register_invalid_email_address">Please enter a valid email address.</string>
    <string name="forgot_password">To recover your password, please visit www.dochoo.com</string>
    <string name="action_logout">Log Out</string>
    <string name="logout_title">Confirm Log Out</string>
    <string name="logout_message">Logging out will clear all user data and history on the device. You can export your data at www.dochoo.com</string>
    <string name="logout_confirm">Log Out</string>
    <string name="cancel">Go back</string>
    <string name="register_detail_info">To refine your profile, please log onto www.dochoo.com</string>
    <string name="action_capture">Scan QR code now</string>
    <string name="contact_patient">Patients</string>
    <string name="contact_pro">Healthcare Professionals</string>
    <string name="contact_add_success">Successfully Added</string>
    <string name="contact_add_failed">Could not locate contact, please try again.</string>
    <string name="contact_added_by_others"> has added you as his contact.</string>
    <string name="contact_added_by_anonym"> You have new contact.</string>
    <string name="toast_doctormainactivity_pin_already_added">This PIN has already been added.</string>
    <string name="toast_doctormainactivity_pin_no_exists">This PIN does not exist, please verify and try again.</string>
    <string name="toast_doctormainactivity_blocked">You have been blocked by this user.</string>
    <string name="toast_doctormainactivity_other">Cannot connect to server at this time. Please try again.</string>
    <string name="button_doctormainactivity_enter_pin">Enter PIN</string>
    <string name="button_doctormainactivity_scan">Scan QR code now</string>
    <string name="title_dialog_doctormainactivity_add"></string>
    <string name="title_dialog_doctormainactivity_input_pin">Enter PIN</string>
    <string name="toast_entitylistactivity_pin_duplicate">This PIN has already been added.</string>
    <string name="toast_entitylistactivity_pin_no_exists">This PIN does not exist, please verify and try again.</string>
    <string name="toast_entitylistactivity_other">Cannot connect to server at this time. Please try again.</string>
    <string name="toast_entitylistactivity_scan_failed">QR code scan failed, please try again.</string>
    <string name="toast_entitylistactivity_add_new_success">Healthcare professional added successfully</string>
    <string name="toast_entitylistactivity_upload_profile_icon_failed">Profile image upload failed</string>
    <string name="toast_entitylistactivity_upload_profile_icon_success">Profile image upload complete</string>
    <string name="button_dialog_single_healthcare_provider">Individual Professional</string>
    <string name="button_dialog_medical_group">Healthcare Groups or organizations</string>
    <string name="title_dialog_registeruseractivity_select_user_type">Select user type</string>
    <string name="title_dialog_registeruseractivity_signin_patient">Sign in as a patient</string>
    <string name="content_dialog_registeruseractivity_ask_patient_signin">Would you like to sign in or register for a patient account now?</string>
    <string name="confirm_no_skip">No(Skip)</string>
    <string name="textview_settings_signin_first">Please complete sign in first</string>
    <string name="toast_error_google_service">Error with GOOGLE MAP service, please restart.</string>
    <string name="marker_map_title_doctor">Healthcare Professional</string>
    <string name="toast_error_download_failed">Download failed. Please try again.</string>
    <string name="title_app_chooser_select_picture">Select image.</string>
    <string name="toast_error_recording_failed">Recording failed. Please try again.</string>
    <string name="time_am">AM</string>
    <string name="time_pm">PM</string>
    <string name="toast_error_damaged_voice">Damaged Voice File, please try again.</string>
    <string name="msg_dialog_downloading">Downloading</string>
    <string name="toast_error_birth_format">Birth-date format error</string>
    <string name="toast_error_load_profile">Cannot load user profile</string>
    <string name="toast_success_update_profile">Update user profile succeeded</string>
    <string name="toast_failure_update_profile">Update user profile failed</string>
    <string name="toast_success_upload_icon">Profile image upload complete; your profile icon has been saved.</string>
    <string name="toast_failure_upload_icon">Profile image upload failed</string>
    <string name="website">Website:</string>
    <string name="accepted_insurance">Accepted Insurances:</string>
    <string name="username">Username:</string>
    <string name="your_username">Your Username</string>
    <string name="signout">Sign Out And Wipe All Data</string>
    <string name="doctor_name">Healthcare professional name</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="gender">Gender:</string>
    <string name="submit">Submit</string>
    <string name="firstname_colon">First Name:</string>
    <string name="lastname_colon">Last Name:</string>
    <string name="email_colon">Email:</string>
    <string name="confirm_pwd_colon">Confirm Pwd:</string>
    <string name="role_patient">I am a Patient or Family</string>
    <string name="register_email_address">Email address:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="dob">Date of birth:</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="not_member_yet">Not a member yet?</string>
    <string name="phone_number_chc">(323) 261-5866</string>
    <string name="email_chc">info@chcgp.com</string>
    <string name="about_mission">Mission</string>
    <string name="about_mission_content">At Dochoo, our goal is focused on re-engineering the patient doctor engagement experience. We believe more communication and access leads to desired outcomes.</string>
    <string name="about_contact">Contact</string>
    <string name="about_address_chc">13181 Crossroads Pkwy. N., Suite 200\nCity of Industry, CA 91746</string>
    <string name="about_about_us">About Us</string>
    <string name="about_about_us_content">California Healthcom Group is a Los Angeles based startup focused on building disruptive healthcare platforms connecting healthcare professionals to patients globally.\n\nOur technologies enables patients to connect with care providers anywhere in the world through the use of low cost consumer and mobile devices.\n\nHealthcom provides the tools and platform to empower health consumers and expand clinical practices beyond geographic borders.</string>
</resources>